# RustIE

./: .gitignore  Cargo.toml  README.md  build_error.txt
.metals/: metals.lock.db
configs/: schema.yaml
src/: lib.rs  main.rs  query.pest
src/api/: handlers.rs  mod.rs  models.rs  server.rs
src/compiler/: ast.rs  pest_parser.rs
src/compiler/compiler/: basic_compiler.rs  graph_compiler.rs  mod.rs
src/compiler/parser/: mod.rs
src/data/: README.md  dependency_vocabulary.rs  document.rs  mod.rs  parser.rs
src/digraph/: graph.rs  graph_trait.rs  mod.rs  traversal.rs  zero_copy.rs  zero_copy_writer.rs
src/digraph/traversal/: automaton.rs  basic.rs  matcher.rs  mod.rs  patterns.rs  query.rs  tests.rs  types.rs
src/engine/: config.rs  constants.rs  core.rs  document.rs  execution.rs  extractor_engine.rs  mod.rs  schema.rs
src/query/: ast.rs  mod.rs  pest_parser.rs
src/query/compiler/: basic_compiler.rs  graph_compiler.rs  mod.rs
src/query/parser/: mod.rs
src/results/: mod.rs  rustie_results.rs
src/tantivy_integration/: assertion_query.rs  boolean_query.rs  collector.rs  concat_query.rs  graph_traversal.rs  match_selector.rs  mod.rs  named_capture_query.rs  position_prefilter.rs  position_tokenizer.rs  queries_d.rs  spans.rs  utils.rs
src/tantivy_integration/graph_traversal/: candidate_driver.rs  intersection.rs  logging.rs  mod.rs  pattern_utils.rs  query.rs  scorer.rs  stats.rs  tests.rs  types.rs  weight.rs
src/types/: match_node.rs  mod.rs  span.rs
