[package]
name = "rustie"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.24"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.4"
log = "0.4"
env_logger = "0.10"
flate2 = "1.0"
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8"
indicatif = "0.17"
rand = "0.8"
pest = "2.7"
pest_derive = "2.7"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "data_parser"
path = "src/bin/data_parser.rs"

[[bin]]
name = "query_parser"
path = "src/bin/query_parser.rs"

[[bin]]
name = "document_indexer"
path = "src/bin/document_indexer.rs"

[[bin]]
name = "test_queries"
path = "test_queries.rs"

[[bin]]
name = "test_full_pipeline"
path = "test_full_pipeline.rs"

[[bin]]
name = "graph_traversal_2"
path = "src/bin/graph_traversal_2.rs"

[[bin]]
name = "test_parser"
path = "src/bin/test_parser.rs"

[[bin]]
name = "test_compiler_features"
path = "src/bin/test_compiler_features.rs"

[[bin]]
name = "comprehensive_test"
path = "src/bin/comprehensive_test.rs"

[[bin]]
name = "create_gzip"
path = "src/bin/create_gzip.rs"

[[bin]]
name = "create_test_index"
path = "src/bin/create_test_index.rs"